--- a/_posts/design/2015-08-15-comments.md
+++ b/_posts/design/2015-08-15-comments.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-subheadline: 
-title: 
+subheadline: "Discussion"
+title: "Now with Comments!"
 teaser: "For a blog you need comments. Like all those other jekyll themes we baked in Disqus. It's easy to set, it works and makes a static jekyll blog more dynamic."
 header:
     image_fullwidth: "header_typewriter.jpg"
