--- a/_posts/design/2014-09-15-gallery.md
+++ b/_posts/design/2014-09-15-gallery.md
@@ -10,8 +10,8 @@ tags:
 image:
    thumb: "gallery-example-1-thumb.jpg"
 gallery:
-    - image_url: gallery-example-1.jpg
-      caption: Great images by Unsplash.com
+    - image_url: 1.jpg
+      caption: Support vector machines on PYNQ
     - image_url: gallery-example-2.jpg
       caption: Great images by Unsplash.com
     - image_url: gallery-example-3.jpg
