--- a/_posts/design/2014-09-15-gallery.md
+++ b/_posts/design/2014-09-15-gallery.md
@@ -10,21 +10,21 @@ tags:
 image:
    thumb: "gallery-example-1-thumb.jpg"
 gallery:
-    - image_url: 1.jpg
+    - image_url:1.jpg
       caption: Great images by Unsplash.com
-    - image_url: 1.jpg
+    - image_url: gallery-example-2.jpg
       caption: Great images by Unsplash.com
-    - image_url: 1.jpg
+    - image_url: gallery-example-3.jpg
       caption: Great images by Unsplash.com
-    - image_url: 1.jpg
+    - image_url: gallery-example-4.jpg
       caption: Great images by Unsplash.com
-    - image_url: 1.jpg
+    - image_url: gallery-example-5.jpg
       caption: Great images by Unsplash.com
-    - image_url: 1.jpg
+    - image_url: gallery-example-6.jpg
       caption: Great images by Unsplash.com
-    - image_url: 1.jpg
+    - image_url: gallery-example-7.jpg
       caption: Great images by Unsplash.com
-    - image_url: 1.jpg
+    - image_url: gallery-example-8.jpg
       caption: Great images by Unsplash.com
 ---
 You just need to choose a template like the [`page`][3]- or [`page-fullwidth`][4]-template and then just use `{% raw %}{% include gallery %}{% endraw %}`.
