--- a/_posts/design/2014-09-13-grid.md
+++ b/_posts/design/2014-09-13-grid.md
@@ -17,7 +17,7 @@ PYNQ can be used with Zynq, Zynq UltraScale+, Zynq RFSoC, Alveo accelerator boar
 breadcrumb: false
 categories:
     - design
-permalink: "/getting-started/"
+permalink: "/aboutpynq/"
 header:
     image_fullwidth: "unsplash_brooklyn-bridge_header.jpg"
 image:
