--- a/_posts/design/2014-08-19-contact.md
+++ b/_posts/design/2014-08-19-contact.md
@@ -7,9 +7,9 @@ categories:
     - design
 permalink: "/design/contact/"
 header:
-    image_fullwidth: "Topimage.jpg"
+    image_fullwidth: "White.png"
 image:
-    thumb: "Topimage.jpg"
+    thumb: "White.png"
 ---
 
 <h3>Contact us if you have any questions or issues at <a href="xup@xilinx.com">xup@xilinx.com</a></h3>
